# Intelligent-Healthcare-System

./: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  Standard.h  enroll.cpp  enroll.h  enroll.ui  login_widget.cpp  login_widget.h  login_widget.ui  main.cpp  resources.qrc  start_local_server.sh
Client/: admin_client.cpp  admin_client.h  admin_client.ui  doctor_client.cpp  doctor_client.h  doctor_client.ui  patient_client.cpp  patient_client.h  patient_client.ui
Fun./: DataManager.cpp  DataManager.h  JsonMessageBuilder.cpp  JsonMessageBuilder.h  function.cpp  function.h
Instance/: StateManager.cpp  StateManager.h  UserSession.h
NetWork/: tcpclient.cpp  tcpclient.h
Notice/: adminnoticeclient.cpp  adminnoticeclient.h  adminnoticeclient.ui  doctornoticeclient.cpp  doctornoticeclient.h  doctornoticeclient.ui  patientnoticeclient.cpp  patientnoticeclient.h  patientnoticeclient.ui
QuestionClient/: patienthealthquestionclient.cpp  patienthealthquestionclient.h  patienthealthquestionclient.ui
Server/: database_config.h.example  server.cpp  server_local.cpp
adviceClient/: doctoradviceclient.cpp  doctoradviceclient.h  doctoradviceclient.ui  doctoradvicemenuclient.cpp  doctoradvicemenuclient.h  doctoradvicemenuclient.ui  patientadviceclient.cpp  patientadviceclient.h  patientadviceclient.ui
appointClient/: patientappoint.cpp  patientappoint.h  patientappoint.ui
caseClient/: doctorcaseclient.cpp  doctorcaseclient.h  doctorcaseclient.ui  doctorcaseeditclient.cpp  doctorcaseeditclient.h  doctorcaseeditclient.ui  patientcasemenuclient.cpp  patientcasemenuclient.h  patientcasemenuclient.ui
checkInClient/: admincheckinclient.cpp  admincheckinclient.h  admincheckinclient.ui  admincheckinresultclient.cpp  admincheckinresultclient.h  admincheckinresultclient.ui  doctorcheckinclient.cpp  doctorcheckinclient.h  doctorcheckinclient.ui
database/: init_database.sql
docs/: ARCHITECTURE.md  PROJECT_OVERVIEW.md
docs/tests/: 代码审查和静态测试.md  功能度测试报告.md  易用性测试报告.md  用户文档检查报告.md  软件质量与评测中期报告.md
infoClient/: admininfoclient.cpp  admininfoclient.h  admininfoclient.ui  admininfodoctorclient.cpp  admininfodoctorclient.h  admininfodoctorclient.ui  admininfomenuclient.cpp  admininfomenuclient.h  admininfomenuclient.ui  doctorinfo.cpp  doctorinfo.h  doctorinfo.ui  patientinfo.cpp  patientinfo.h  patientinfo.ui
scripts/: build.bat  build.sh  build_local.sh  release.sh  setup_mysql.sh  start.sh  test.sh
tests/: CMakeLists.txt  TEST_SUMMARY.md  run_tests.sh  run_unit_tests.sh  tests_main.cpp
tests/config/: test_config.cpp  test_config.h
tests/integration/: NetworkIntegration_test.cpp
tests/mocks/: MockTcpClient.cpp  MockTcpClient.h
tests/unit/: DataManager_test.cpp  Function_test.cpp  JsonMessageBuilder_test.cpp  StateManager_test.cpp  TcpClient_test.cpp  UserSession_test.cpp
